--- a/cpp/cmake_tutorial/lib/CMakeLists.txt
+++ b/cpp/cmake_tutorial/lib/CMakeLists.txt
@@ -1,16 +1,27 @@
+# set the project name
+project(arithmeticLib VERSION 2.0.0)
+
 # add library
 add_library(
-arithmeticLib SHARED # STATIC or SHARED
+"${PROJECT_NAME}" SHARED # STATIC or SHARED
 ./src/arithmetic.cpp
 )
 
-# PUBLIC = anyone who is consuming this library also receives it (thus PRIVATE here will prompt error).
+# PUBLIC = anyone who is consuming this library also receives it.
 # PRIVATE = only this library receives it.
-# INTERFACE = anyone who is consuming this library receives it but not the library itself.
+# INTERFACE = anyone who is consuming this library receives it but not the library
+# itself.
 
 # add include directories (all paths relative to the CMakeLists.txt file)
 target_include_directories(
-arithmeticLib PUBLIC "./include"
+"${PROJECT_NAME}" PUBLIC "./include" # PRIVATE here will prompt error
 )
 
-target_compile_features(arithmeticLib PRIVATE cxx_std_11)
+target_compile_features("${PROJECT_NAME}" PRIVATE cxx_std_11)
+
+# List important variables
+include(${CMAKE_SOURCE_DIR}/PrintVariables.cmake)
+set(flag FALSE)
+if(${flag})
+	print_variables()
+ENDIF()
