--- a/cpp/cmake_tutorial/src/CMakeLists.txt
+++ b/cpp/cmake_tutorial/src/CMakeLists.txt
@@ -18,10 +18,16 @@ target_include_directories(
 )
 
 # Include path for boost
-# find_package is used to search for available boost libraries. It defers searching for Boost to FindBoost.cmake, which is default installed with CMake. Upon finding Boost, the find_package() call will have filled many variables (check the reference for FindBoost.cmake). Among these are BOOST_INCLUDE_DIRS, Boost_LIBRARIES and Boost_XXX_LIBRARY variabels, with XXX replaced with specific Boost libraries. You can use these to specify include_directories and target_link_libraries.
+# find_package is used to search for available boost libraries. It defers searching
+# for Boost to FindBoost.cmake, which is default installed with CMake. Upon finding
+# Boost, the find_package() call will have filled many variables (check the reference
+# for FindBoost.cmake). Among these are BOOST_INCLUDE_DIRS, Boost_LIBRARIES and 
+# Boost_XXX_LIBRARY variabels, with XXX replaced with specific Boost libraries. 
+# You can use these to specify include_directories and target_link_libraries.
 FIND_PACKAGE(Boost REQUIRED COMPONENTS program_options)
 include_directories(${Boost_INCLUDE_DIRS})
 
 # Link static or shared libraries
-# Place target_link_libraries after add_executable and find_package lines, so all linked components are known
+# Place target_link_libraries after add_executable and find_package lines, so all
+# linked components are known
 target_link_libraries("${PROJECT_NAME}" PRIVATE arithmeticLib ${Boost_LIBRARIES})
