more opencv related stuff

--- a/opencv/DisplayImage/CMakeLists.txt
+++ b/opencv/DisplayImage/CMakeLists.txt
@@ -1,23 +1,30 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(DisplayImage)
+project(tutorialDisplayImage)
+
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/belgium.jpg DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
 # this overrides the OpenCV_DIR env variable (if set previously)
-set(OpenCV_DIR "C:/Users/ahkad/opencv/gnu_build/install")
+# set(OpenCV_DIR "C:/Users/ahkad/opencv/gnu_build/install")
 
 if (MSVC)
-	add_compile_options(/W4 /analyze)
+        add_compile_options(/W4 /analyze)
 else()
-	add_compile_options(-Wall -Wextra -Wpedantic -O3)
+        add_compile_options(-Wall -Wextra -Wpedantic -O3)
 endif()
 
 find_package(OpenCV REQUIRED)
 
 include_directories(${OpenCV_INCLUDE_DIRS})
 
-add_executable(tutorial main.cpp)
+FILE(GLOB allcpp ./*.cpp)
 
-target_link_libraries(tutorial ${OpenCV_LIBS})
+add_executable(
+"${PROJECT_NAME}"
+${allcpp}
+)
+
+target_link_libraries("${PROJECT_NAME}" ${OpenCV_LIBS})
 
 message(STATUS "OpenCV_DIR ${OpenCV_DIR}")
 message(STATUS "OpenCV_INCLUDE_DIRS ${OpenCV_INCLUDE_DIRS}")
