--- a/opencv/videoanalysis_module/CMakeLists.txt
+++ b/opencv/videoanalysis_module/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(tutorialVideoAnalysis)
+project(project_videoanalysis_module)
 
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/videoData DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
