--- a/opencv/videoio_module/CMakeLists.txt
+++ b/opencv/videoio_module/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(tutorialVideoIO)
+project(project_videoio_module)
 
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/data DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
