--- a/opencv/base64_encoding/CMakeLists.txt
+++ b/opencv/base64_encoding/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(tutorial_base64encoding)
+project(project_base64_encoding)
 
 # this overrides the OpenCV_DIR env variable (if set previously)
 # set(OpenCV_DIR "C:/Users/ahkad/opencv/gnu_build/install")
