--- a/opencv/imgproc_module/CMakeLists.txt
+++ b/opencv/imgproc_module/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(tutorial_imgproc_module)
+project(project_imgproc_module)
 
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/images DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
