--- a/opencv/imgproc_module/CMakeLists.txt
+++ b/opencv/imgproc_module/CMakeLists.txt
@@ -4,13 +4,24 @@ project(project_imgproc_module)
 
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/images DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
-# this overrides the OpenCV_DIR env variable (if set previously)
-# set(OpenCV_DIR "C:/Users/ahkad/opencv/gnu_build/install")
+set(CMAKE_CXX_STANDARD 11)
 
-if (MSVC)
-        add_compile_options(/W4 /analyze)
-else()
-        add_compile_options(-Wall -Wextra -Wpedantic -O3)
+if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+    message(STATUS "Using Clang")
+elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+    message(STATUS "Using GCC")
+    add_compile_options(-Wall -Wextra -O3)
+elseif (CMAKE_CXX_COMPILER_ID STREQUAL "Intel")
+    message(STATUS "Using Intel C++")
+elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+    message(STATUS "Using Visual Studio C++")
+    add_compile_options(/W4 /analyze)
+endif()
+
+if (WIN32)
+    set(OpenCV_DIR "C:/Users/ahkad/opencv/gnu_build/install")
+elseif (UNIX)
+    set(OpenCV_DIR "/usr/local/lib/cmake/opencv4")
 endif()
 
 find_package(OpenCV REQUIRED)
