improve cmake tutorial

--- a/cpp/cmake_tutorial/lib/CMakeLists.txt
+++ b/cpp/cmake_tutorial/lib/CMakeLists.txt
@@ -1,4 +1,6 @@
-message(STATUS "In CMakeLists.txt in lib folder ---------------------------------")
+if(${PRINT_MESSAGES})
+    message(STATUS "In CMakeLists.txt in lib folder ---------------------------------")
+endif()
 
 # set the project name
 project(arithmeticLib VERSION 2.0.0)
@@ -22,10 +24,10 @@ target_include_directories(
 target_compile_features("${PROJECT_NAME}" PRIVATE cxx_std_11)
 
 # List important variables
-message(STATUS "PrintVariables in lib folder ------------------------------------")
-include(${CMAKE_SOURCE_DIR}/PrintVariables.cmake)
-set(flag TRUE)
-if(${flag})
-	print_variables()
-ENDIF()
-message(STATUS "-----------------------------------------------------------------")
+if(${PRINT_MESSAGES})
+    message(STATUS "PrintVariables in lib folder ------------------------------------")
+    include(${CMAKE_SOURCE_DIR}/PrintVariables.cmake)
+    print_variables()
+    message(STATUS "-----------------------------------------------------------------")
+endif()
+
