--- a/cpp/cmake_tutorial/CMakeLists.txt
+++ b/cpp/cmake_tutorial/CMakeLists.txt
@@ -1,33 +1,51 @@
-cmake_minimum_required(VERSION 3.14.6)
+# Use at-least 3.0 for Modern CMake
+cmake_minimum_required(VERSION 3.16)
 
-message(STATUS "In CMakeLists.txt in cmake_tutorial folder ----------------------")
+set(PRINT_MESSAGES FALSE)
 
-# set the project name
-project(tutorial VERSION 1.0.0)
+if(${PRINT_MESSAGES})
+    message(STATUS "In CMakeLists.txt in cmake_tutorial folder ----------------------")
+ENDIF()
 
-# everything passed to CMake is a string
+# Sets the name of the project and stores it in the PROJECT_NAME variable
+project(target_Tutorial VERSION 1.0.0)
+
+# Everything passed to CMake is a string
 # quotes are optional but are useful when the string has white spaces as below
-# Note: My_VARIABLE if set here will override an environment variable (if there
+# Note: MY_VARIABLE if set here will override an environment variable (if there
 # exists one) of the same name
-set(My_VARIABLE "The project name is")
-message(STATUS "${My_VARIABLE} ${PROJECT_NAME}")
-message(STATUS "The project version is ${PROJECT_VERSION}")
+if(${PRINT_MESSAGES})
+    set(MY_VARIABLE "The project name is")
+    message(STATUS "${MY_VARIABLE} ${PROJECT_NAME}")
+    message(STATUS "The project version is ${PROJECT_VERSION}")
+endif()
 
 # Copy config.h to the build dir to be later used for pre-processor macro substitution
-configure_file(config.h ${CMAKE_BINARY_DIR}/config.h)
-include_directories(${CMAKE_BINARY_DIR})
+configure_file(config.h.in ${PROJECT_BINARY_DIR}/config.h)
 
-# add compilation flags
-if (MSVC)
-	add_compile_options(/W4 /analyze)
-else()
-	add_compile_options(-Wall -Wextra -Wpedantic -O3)
+# Specify the C++ standard when compiling targets from the current directory and below.
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
+
+# Following flags will be used when compiling targets from the current directory and below.
+if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+    message(STATUS "Using Clang")
+elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+    message(STATUS "Using GNU GCC")
+    add_compile_options(-Wall -Wextra -Wpedantic -O3)
+elseif (CMAKE_CXX_COMPILER_ID STREQUAL "Intel")
+    message(STATUS "Using Intel C++")
+elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+    message(STATUS "Using Visual Studio C++")
+    add_compile_options(/W4 /analyze)
 endif()
+
+message(STATUS "Using CXX compiler version " ${CMAKE_CXX_COMPILER_VERSION})
 
 # add sub directories (all paths relative to the CMakeLists.txt file)
 # every added sub directory should have a CMakeLists.txt file
-add_subdirectory(./lib)
-add_subdirectory(./src)
+add_subdirectory(lib)
+add_subdirectory(src)
 
 # Compile feature requirements may be specified with the target_compile_features()
 # command. For example, if a target must be compiled with compiler support for the
@@ -45,9 +63,8 @@ target_compile_features("${PROJECT_NAME}" PRIVATE cxx_std_14)
 
 # List important variables
 include(${CMAKE_SOURCE_DIR}/PrintVariables.cmake)
-message(STATUS "PrintVariables in cmake_tutorial folder -------------------------")
-set(flag TRUE)
-if(${flag})
-	print_variables()
-ENDIF()
-message(STATUS "-----------------------------------------------------------------")
+if(${PRINT_MESSAGES})
+    message(STATUS "PrintVariables in cmake_tutorial folder -------------------------")
+    print_variables()
+    message(STATUS "-----------------------------------------------------------------")
+endif()
