--- a/cpp/cmake_tutorial/src/CMakeLists.txt
+++ b/cpp/cmake_tutorial/src/CMakeLists.txt
@@ -2,12 +2,9 @@ if(${PRINT_MESSAGES})
     message(STATUS "In CMakeLists.txt in src folder----------------------------------")
 endif()
 
-# Use glob module to find all the pathnames matching a specified pattern.
-# All the .cpp files are found so that they don't need to be added separately.
 FILE(GLOB src1allcpp ./src1/*.cpp)
 FILE(GLOB src2allcpp ./src2/*.cpp)
 
-# Add the target executable
 add_executable(
 "${PROJECT_NAME}"
 ${src1allcpp}
@@ -21,22 +18,14 @@ target_include_directories(
 "${PROJECT_NAME}" PRIVATE "include" PRIVATE ${PROJECT_BINARY_DIR}
 )
 
-# Include path for boost
-# find_package is used to search for available boost libraries. It defers searching
-# for Boost to FindBoost.cmake, which is default installed with CMake. Upon finding
-# Boost, the find_package() call will have filled many variables (check the reference
-# for FindBoost.cmake). Among these are BOOST_INCLUDE_DIRS, Boost_LIBRARIES and 
-# Boost_XXX_LIBRARY variabels, with XXX replaced with specific Boost libraries. 
-# You can use these to specify include_directories and target_link_libraries.
-# FIND_PACKAGE(Boost REQUIRED COMPONENTS program_options)
 FIND_PACKAGE(Boost COMPONENTS system filesystem REQUIRED)
 
-include_directories(${Boost_INCLUDE_DIRS})
+target_include_directories("${PROJECT_NAME}" PRIVATE ${Boost_INCLUDE_DIRS})
 
 # Link static or shared libraries
 # Place target_link_libraries after add_executable and find_package lines, so all
 # linked components are known
-target_link_libraries("${PROJECT_NAME}" PRIVATE arithmeticLib ${Boost_LIBRARIES})
+target_link_libraries("${PROJECT_NAME}" PRIVATE arithmeticLib PRIVATE ${Boost_LIBRARIES})
 
 # List important variables
 if(${PRINT_MESSAGES})
