--- a/cpp/cpp20_tests/version_test/CMakeLists.txt
+++ b/cpp/cpp20_tests/version_test/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 3.17)
 
 project(target_version_test)
 
-set(CMAKE_CXX_STANDARD 20) # Default value for CXX_STANDARD target property if set when a target is created.
-set(CMAKE_CXX_STANDARD_REQUIRED ON) # Default value for CXX_STANDARD_REQUIRED target property if set when a target is created.
+set(CMAKE_CXX_STANDARD 20) # Default value for CXX_STANDARD target property if set when a target is created
+set(CMAKE_CXX_STANDARD_REQUIRED ON) # Default value for CXX_STANDARD_REQUIRED target property if set when a target is created
 # set(CMAKE_CXX_FLAGS "-std=c++20") # Not a good idea
 
 add_executable(
@@ -12,7 +12,7 @@ main.cpp
 )
 
 set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 20)
-# If the value requested does not result in a compile flag being added for the compiler in use, a previous standard flag will be added instead.
+# If the value requested does not result in a compile flag being added for the compiler in use, a previous standard flag will be added instead
 # To prevent this decay behavior following can be added
 set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD_REQUIRED ON)
 
